--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-hello-world></app-hello-world>
-<app-hello-world></app-hello-world>
-<app-hello-world></app-hello-world>
+<h1>{{title}}</h1>
+<nav>
+  <a routerLink="hello">Hello</a>
+  <a routerLink="dashboard">Hello</a>
+</nav>
+<router-outlet></router-outlet>
