--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,18 @@
-<h1>{{title}}</h1>
+<app-header></app-header>
+<section class="jumbotron text-center">
+  <div class="container">
+    <h1 class="jumbotron-heading">Album example</h1>
+    <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+    <p>
+        <a routerLink="hello" class="btn btn-primary my-2">Hello</a>
+        <a routerLink="dashboard" class="btn btn-secondary my-2">Dashboard</a>
+    </p>
+  </div>
+</section>
+<!-- 
 <nav>
-  <a routerLink="hello">Hello</a>
-  <a routerLink="dashboard">Hello</a>
+    <a routerLink="hello" class="btn btn-primary my-2">Hello</a>
+    <a routerLink="dashboard" class="btn btn-secondary my-2">Dashboard</a>
 </nav>
+-->
 <router-outlet></router-outlet>
