Added data binding cheatsheet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,4 +15,7 @@
     <a routerLink="dashboard" class="btn btn-secondary my-2">Dashboard</a>
 </nav>
 -->
+
+<app-data-binding-cheatsheet></app-data-binding-cheatsheet>
+
 <router-outlet></router-outlet>
