--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,26 +1,31 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-        <img src="http://www.wallpapereast.com/static/images/cool-wallpapers-background-wallpapers-wallfive.jpg" class="d-block w-100">
+<div class="container">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="http://www.wallpapereast.com/static/images/cool-wallpapers-background-wallpapers-wallfive.jpg"
+          class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img
+          src="http://www.wallpapereast.com/static/images/beauty-nature-reflections-wallpaper-hd-images-631kdv5nbt.jpg"
+          class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="http://www.wallpapereast.com/static/images/cool-wallpapers_4.jpg" class="d-block w-100">
+      </div>
     </div>
-    <div class="carousel-item">
-      <img src="http://www.wallpapereast.com/static/images/beauty-nature-reflections-wallpaper-hd-images-631kdv5nbt.jpg" class="d-block w-100">
-    </div>
-    <div class="carousel-item">
-      <img src="http://www.wallpapereast.com/static/images/cool-wallpapers_4.jpg" class="d-block w-100">
-    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
