--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -41,7 +41,7 @@
           </div>
         </div>
       </div>
-      <div class="card w-75 container rounded-pill myBorderTop10" *ngFor="let post of posts">
+      <div class="card w-75 container myBorderTop10" *ngFor="let post of posts">
         <div class="card-body myTextAlignCenter">
           <h5 class="card-title">{{post.title}}</h5>
           <p class="card-text">{{post.content}}</p>
