Added blog and home

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" routerLink="/posts">Bloggler</a>
+    <a class="navbar-brand" routerLink="/home">Bloggler</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -12,8 +12,11 @@
           <a class="nav-link" routerLink="about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="new">Post</a>
+          <a class="nav-link" routerLink="posts">Posts</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="blog">Blog</a>
+          </li>
         
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" routerLink="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
